--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7711,6 +7711,32 @@ img {
 
   .section-photo {
     display: none; } }
+.footer {
+  width: 100%;
+  padding: 40px 50px;
+  background-color: #000;
+  color: #FFF;
+  font-family: "Raleway", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.footer-first-list {
+  margin-bottom: 15px; }
+
+.footer-list-name {
+  margin: 15px; }
+
+@media (min-width: 780px) {
+  .footer {
+    flex-direction: row;
+    justify-content: space-between; }
+
+  .footer-first-list {
+    margin-top: 0; } }
 .columnas {
   display: grid;
   grid-template-columns: repeat(12, 1fr); }
@@ -7896,10 +7922,10 @@ img {
   .col_xl_1 {
     grid-column-start: span 1; } }
 .prices-section {
-  background-image: url(../../assets/img/bg-price.svg);
+  background-image: url(../../assets/img/bg-price.png);
+  background-size: 171vw 155vh;
   background-repeat: no-repeat;
-  background-position: 58%;
-  height: 120vh; }
+  background-position: 58%; }
 
 .prices-title {
   padding: 12rem 0 0;
@@ -7946,15 +7972,24 @@ img {
   font-family: "Raleway", sans-serif;
   font-size: 14px;
   padding: 15px 0;
-  height: 38vw;
+  min-height: 177px;
   border-bottom: 1px solid #C7C8CC;
   line-height: 26px; }
 
 @media (min-width: 780px) {
   .prices-section {
+    background-image: url(../../assets/img/bg-price.svg);
     display: flex;
+    height: 120vh;
     align-items: center;
-    flex-direction: column; }
+    justify-content: center;
+    flex-direction: column;
+    background-size: cover; }
+
+  .first-cards,
+  .second-cards {
+    padding: 52px;
+    margin: 40px; }
 
   .prices-cards-wrap {
     display: flex;
@@ -7964,7 +7999,7 @@ img {
     font-family: "Raleway", sans-serif;
     font-size: 14px;
     padding: 20px 0;
-    height: 30vw;
+    min-height: 177px;
     border-bottom: 1px solid #C7C8CC;
     line-height: 30px; } }
 .login-button {
